<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    style="@style/AppBaseTheme"
    tools:context=".ui.creditcard.CreditCardActivity">
    <!--<com.devmarvel.creditcardentry.library.CreditCardForm
        android:id="@+id/credit_card_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app2:helper_text_color="@color/text_helper_color"
        app2:include_helper="false"
        app2:include_zip="false"/>-->

    <LinearLayout
        android:layout_marginTop="80dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/linear_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_linear"
        android:orientation="vertical"
        android:padding="10dp"
        app2:layout_constraintBottom_toTopOf="@+id/linear_ccv"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="Credit Card Number" />

        <EditText
            android:id="@+id/EDIT_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edit_text"
            android:hint="@string/_0000_0000_0000_0000"
            android:inputType="number"
            android:maxLength="16"
            android:padding="10dp" />

        <TextView
            android:id="@+id/TV_cc_name"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/TV_number"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <!--VIEWMODEL WORKS FINE-->
        <TextView
            android:id="@+id/TV_number_viewmodel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="16"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/linear_ccv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_linear"
        android:orientation="vertical"
        android:padding="10dp"
        app2:layout_constraintBottom_toTopOf="@+id/linear_expiry"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toBottomOf="@id/linear_number">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="CCV" />

        <EditText
            android:id="@+id/EDIT_ccv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edit_text"
            android:hint="@string/ccv"
            android:inputType="number"
            android:maxLength="3"
            android:padding="10dp" />

        <TextView
            android:id="@+id/TV_ccv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="3"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintStart_toStartOf="parent"
            app2:layout_constraintTop_toBottomOf="@id/linear_number" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/linear_expiry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_linear"
        android:orientation="vertical"
        android:padding="10dp"
        app2:layout_constraintBottom_toTopOf="@+id/linear_buttons"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toBottomOf="@id/linear_ccv">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/validity" />

        <EditText
            android:id="@+id/EDIT_validity_month_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edit_text"
            android:hint="@string/expiry_date_month"
            android:inputType="number"
            android:maxLength="5"
            android:padding="10dp" />

        <TextView
            android:id="@+id/TV_validity_month_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="#0f0"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="202dp"
        android:id="@+id/linear_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        app2:layout_constraintBottom_toBottomOf="parent"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toBottomOf="@id/linear_expiry">
        <!--<Button
            android:id="@+id/BUTTON_cek_validitas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="cek" />-->

        <Button
            android:id="@+id/BUTTON_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="save" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>