<resources>
    <string name="app_name">EmpatKali</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="_0000_0000_0000_0000">0000000000000000</string>
    <string name="ccv">000</string>
    <string name="expiry_date_year">20</string>
    <string name="expiry_date_month">00/00</string>


    <!--Tea Names-->
    <string name="black_tea_name">Black Tea</string>
    <string name="green_tea_name">Green Tea</string>
    <string name="white_tea_name">White Tea</string>
    <string name="oolong_tea_name">Oolong Tea</string>
    <string name="honey_lemon_tea_name">Honey Lemon Tea</string>
    <string name="chamomile_tea_name">Chamomile Tea</string>


    <!--OrderActivity Form values-->
    <string name="Customizations">Customizations</string>
    <string name="milk_choices">Milk Choices</string>
    <string name="sugar_choices">Sugar Choices</string>
    <string name="quantity">Quantity</string>
    <string name="brew_tea">BREW TEA</string>
    <string name="initial_cost">$0.00</string>
    <string name="initial_quantity_value">0</string>
    <string name="tea_size">Size</string>
    <string name="tea_size_small">Small ($5/cup)</string>
    <string name="tea_size_medium">Medium ($6/cup)</string>
    <string name="tea_size_large">Large ($7/cup)</string>
    <string name="milk_type_none">None</string>
    <string name="milk_type_nonfat">Nonfat Milk</string>
    <string name="milk_type_1_percent">1% Milk</string>
    <string name="milk_type_2_percent">2% Milk</string>
    <string name="milk_type_whole">Whole Milk</string>
    <string name="sweet_type_0">0% - Not Sweet</string>
    <string name="sweet_type_25">25% - Slightly Sweet</string>
    <string name="sweet_type_50">50% - Half Sweet</string>
    <string name="sweet_type_75">75% - Moderately Sweet</string>
    <string name="sweet_type_100">100% - Full Sweetness</string>


    <!--OrderSummaryActivity summary values-->
    <string name="order_summary" />
    <string name="total">Total</string>
    <string name="summary_tea_label">Tea Type</string>
    <string name="summary_size_label">Size</string>
    <string name="summary_milk_label">Milk Type</string>
    <string name="summary_sugar_label">Sugar Amount</string>
    <string name="summary_total_label">Order Total</string>
    <string name="summary_quantity_label">Quantity</string>


    <!--OrderSummary Email Values-->
    <string name="summary_email_prompt">Let your friends know you just ordered a delicious tea from TeaTime and they can too!</string>
    <string name="send_email">Send Email</string>
    <string name="order_summary_email_subject">Freshly Brewed from TeaTime</string>
    <string name="email_message">I just ordered a delicious tea from TeaTime. Next time you are craving a tea, check them out!</string>


    <!--Idling Resources loading message-->
    <string name="loading_msg">Your tea is brewing…</string>
    <string name="done_msg">Your tea is ready!</string>
    <string name="credit_card">Credit Card</string>
    <string name="validity">Validity</string>


    <!--Spinner Options-->
    <string-array name="tea_size_array">
        <item>Small ($5/cup)</item>
        <item>Medium ($6/cup)</item>
        <item>Large ($7/cup)</item>
    </string-array>

    <string-array name="milk_array">
        <item>None</item>
        <item>Nonfat Milk</item>
        <item>1% Milk</item>
        <item>2% Milk</item>
        <item>Whole Milk</item>
    </string-array>

    <string-array name="sugar_array">
        <item>0% - Not Sweet</item>
        <item>25% - Slightly Sweet</item>
        <item>50% - Half Sweet</item>
        <item>75% - Moderately Sweet</item>
        <item>100% - Full Sweetness</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>