...
            android:padding="10dp"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintStart_toStartOf="parent"
            app2:layout_constraintTop_toBottomOf="@id/linear_ccv">

            <EditText
                android:id="@+id/EDIT_month"
                android:maxLength="2"
                android:inputType="number"
                android:hint="@string/expiry_date_month"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:layout_width="wrap_content"
...
                android:maxLength="4"
                app2:layout_constraintEnd_toEndOf="parent"
                app2:layout_constraintStart_toStartOf="parent"
                app2:layout_constraintTop_toBottomOf="@+id/TV_ccv" />

            <EditText
                android:id="@+id/EDIT_year"
                android:maxLength="2"
                android:inputType="number"
                android:hint="@string/expiry_date_year"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:layout_width="wrap_content"
...
